# Knowledge-aware-Attention-Network

./: .gitignore  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
configs/: default.json  predict.json
scripts/: install-dev.ps1
src/kan/: __init__.py
src/kan/configs/: default.json  predict.json
src/kan/data/: __init__.py  datasets.py  knowledge_graph.py  preprocessing.py
src/kan/models/: __init__.py  attention.py  bert_text_encoder.py  kan.py  knowledge_encoder.py  pooling.py  transformer_encoder.py
src/kan/repr/: __init__.py  batching.py  entity_embedding.py  text_embedding.py  vocab.py
src/kan/training/: __init__.py  evaluator.py  trainer.py
src/kan/utils/: __init__.py  configs.py  logging.py  metrics.py  seed.py
src/kan_cli/: README.md  __init__.py  batching.py  embedding.py  evaluate.py  helpers.py  main.py  model_wrapper.py  predict.py  runtime.py  tasks.py  train.py
